Style Docs Index

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -46,7 +46,7 @@
 }
 
 #callouts {
-	background-image: url("callout_background.jpg");
+	background-image: url("asd.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: top center;
