--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -9,7 +9,7 @@
 		.wrapper
 			.callout
 				%h2 Organize
-				%p ahsdhasdalksdsalkdhaskdhas
+				%p Organize all your files in docs and store them forever.
 #bottom_cta
 	.wrapper
 	%h2 Go Ahead!
